Fixed navbar view with z-index

--- a/styles.css
+++ b/styles.css
@@ -29,8 +29,9 @@ body {
   position: sticky;
   top: 0;
   z-index: 33;
-  padding: 1em;
+  padding: 1em 0.5em;
   box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.2901960784);
+  background-color: rgb(255, 255, 255);
 }
 .header__menuBar,
 .header .menuBar {
@@ -80,11 +81,12 @@ body {
 .nav {
   display: none;
   position: sticky;
-  top: 68px;
+  top: 65px;
+  z-index: 33;
+  background-color: rgb(255, 255, 255);
 }
 .nav--mobile {
   display: block;
-  margin: 1em;
 }
 .nav .navbar__item {
   margin-top: 0.5em;
@@ -99,6 +101,30 @@ body {
 .nav .navbar__item a {
   text-decoration: none;
   color: rgb(17, 17, 17);
+}
+
+.banner {
+  padding: 3em 1.5em;
+  background-color: rgb(51, 51, 51);
+  color: rgb(255, 255, 255);
+}
+.banner__subtitle {
+  padding-top: 1em;
+  font-family: "Archivo", sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 16px;
+  letter-spacing: 3px;
+  text-align: left;
+}
+.banner__title {
+  padding-top: 1em;
+  font-family: "Old Standard TT", sans-serif;
+  font-size: 56px;
+  font-weight: 400;
+  line-height: 60px;
+  letter-spacing: -1.2px;
+  text-align: left;
 }
 
 .footer::before {
