--- a/styles/components/footer.scss
+++ b/styles/components/footer.scss
@@ -63,7 +63,7 @@
 
     .Copyright_Terminos{
         padding: 2em;
-        background-color: $background-gray-light;
+        background-color: $background-grey-light;
         font-weight: 700;
     }
 }
