--- a/styles/constants/colors.scss
+++ b/styles/constants/colors.scss
@@ -2,7 +2,8 @@ $color-black: rgba(17, 17, 17, 1);
 $color-white: rgba(255, 255, 255, 1);
 $color-grey: rgba(119, 119, 119, 1);
 
-$background-gray: rgba(51, 51, 51, 1);
 $background-beige: rgba(190, 173, 142, 1);
-$background-gray-light:  rgba(248, 248, 248, 1);
+$background-grey-light:  rgba(248, 248, 248, 1);
+$background-grey: rgba(51, 51, 51, 1);
+$background-grey-strong: rgba(34, 34, 34, 1);
 
